[package]
name = "greysquirrel"
version = "0.1.0"
edition = "2021"
description = "Detect keywords in text streams without revealing the keyword (until detection)"
readme = "README.md"
license = "GPL-2.0-only"
authors = ["Stuart Cianos <scianos@alphavida.com>"]
categories = ["command-line-utilities"]

[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
log = "0.4.17"
env_logger = "0.9.3"
clap = { version = "4.0.23", features = ["derive"] }
regex = "1.7.0"
lazy_static = "1.4.0"
substring = "1.4.5"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
lru = "0.8.1"
sysinfo = "0.26.7"
